--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -53,11 +53,19 @@
       align-items: center;
       width: 100%;
 
+      .MobileSidebarBurgerDiv {
+        display: none;
+      }
+
       .Navigation {
         display: flex;
         justify-content: flex-start;
         margin-left: -12px;
         flex-grow: 1;
+
+        svg:hover {
+          cursor: pointer;
+        }
       }
 
       .Logo {
@@ -65,11 +73,21 @@
         justify-content: center;
         align-items: center;
         margin-left: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+
+        :hover {
+          cursor: pointer;
+        }
 
         h3 {
           font-size: 35px;
           font-weight: 400;
           margin: 0px;
+
+          :hover {
+            cursor: pointer;
+          }
         }
       }
 
@@ -79,10 +97,91 @@
         align-items: center;
         margin-right: -12px;
         flex-grow: 1;
+
+        svg:hover {
+          cursor: pointer;
+        }
+      }
+
+      .MobileIcons {
+        display: none;
+
+        svg:hover {
+          cursor: pointer;
+        }
       }
     }
 
     .TextCenter {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin: 0px;
+      list-style-type: none;
+      padding: 0px;
+      margin-top: 5px;
+
+      li {
+        a {
+          box-sizing: border-box;
+          font-size: 16px;
+          padding: 7.5px;
+          display: inline-block;
+        }
+
+        a:hover {
+          // color: red;
+          cursor: pointer;
+        }
+
+        a:after {
+          display: block;
+          content: "";
+          border-bottom: solid 3px blue;
+          transform: scaleX(0);
+          transition: transform 250ms ease-in-out;
+          background-color: indigo;
+        }
+
+        a:hover:after {
+          transform: scaleX(1);
+        }
+
+        div {
+          display: none;
+          position: absolute;
+          background-color: green;
+          width: 100%;
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          z-index: 1;
+          height: 400px;
+          top: 180px;
+          left: 0px;
+        }
+
+        // background-color: green;
+
+        // :after {
+        //   display: block;
+        //   content: "";
+        //   border-bottom: solid 3px #019fb6;
+        //   transform: scaleX(0);
+        //   transition: transform 250ms ease-in-out;
+        // }
+
+        // :hover {
+        //   cursor: pointer;
+        // }
+
+        // :hover:after {
+        //   transform: scaleX(1);
+        // }
+      }
+
+      li:hover div {
+        display: block;
+      }
     }
   }
 }
@@ -95,5 +194,59 @@
 
   .Socials {
     display: none;
+  }
+
+  .SiteHeader {
+    padding: 10px 0px;
+    .SiteHeaderInner {
+      padding: 0px 17px;
+
+      .LayoutCenter {
+        .MobileSidebarBurgerDiv {
+          display: flex;
+          justify-content: flex-start;
+          margin-left: -7.5px;
+          flex-grow: 1;
+
+          svg:hover {
+            cursor: pointer;
+          }
+        }
+
+        .Navigation {
+          display: none;
+        }
+
+        .Logo {
+          margin-left: 32px;
+          margin-top: 0px;
+          margin-bottom: 0px;
+
+          h3 {
+            font-size: 27px;
+          }
+        }
+
+        .Icons {
+          display: none;
+        }
+
+        .MobileIcons {
+          box-sizing: border-box;
+          display: flex;
+          justify-content: flex-end;
+          margin-right: -7.5px;
+          flex-grow: 1;
+
+          :hover {
+            cursor: pointer;
+          }
+        }
+      }
+
+      .TextCenter {
+        display: none;
+      }
+    }
   }
 }
