Made room for PetScheduler

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: orangered;
+}
+
+.Block1 {
+  width: 200px;
+  height: 200px;
+  background-color: #0070f3;
 }
 
 .footer {
