--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,9 +14,22 @@
 }
 
 .Block1 {
-  width: 200px;
-  height: 200px;
-  background-color: #0070f3;
+  width: 70%;
+  height: 300px;
+  border-radius: 50px;
+  background-color: orange;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.UsernameInput {
+  width: 80%;
+}
+
+.PasswordInput {
+  width: 80%;
 }
 
 .footer {
