--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -60,8 +60,8 @@
       .Navigation {
         display: flex;
         justify-content: flex-start;
-        margin-left: -12px;
-        flex-grow: 1;
+        margin-left: 0px;
+        flex: 1;
 
         svg:hover {
           cursor: pointer;
@@ -72,7 +72,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 30px;
+        margin-left: 0px;
         margin-top: 10px;
         margin-bottom: 10px;
 
@@ -95,8 +95,10 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        margin-right: -12px;
-        flex-grow: 1;
+        margin-right: 0px;
+        flex: 1;
+        position: relative;
+        box-sizing: border-box;
 
         svg:hover {
           cursor: pointer;
@@ -121,6 +123,7 @@
       list-style-type: none;
       padding: 0px;
       margin-top: 5px;
+      background-color: green;
 
       li {
         a {
