--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,16 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 0rem;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: orange;
+  background-color: white;
 }
 
 .Block1 {
