--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
 }
 
 .AnnouncementBar {
-  font-family: "Libre";
+  font-family: "Prompt", sans-serif;
   font-weight: 400;
   width: 100%;
   font-size: 12px;
@@ -82,8 +82,9 @@
 
         h3 {
           font-size: 35px;
-          font-weight: 400;
           margin: 0px;
+          font-family: "Prompt", sans-serif;
+          font-weight: 500;
 
           :hover {
             cursor: pointer;
@@ -99,6 +100,44 @@
         flex: 1;
         position: relative;
         box-sizing: border-box;
+
+        .UsernameContainer {
+          position: relative;
+
+          .Username {
+            height: 27px;
+            font-weight: bold;
+            line-height: 27px;
+            // font-size: 24px;
+            margin-bottom: 10px;
+            position: relative;
+            display: block;
+          }
+
+          .UsernameDropdown {
+            display: none;
+            position: absolute;
+            background-color: white;
+            z-index: 300;
+            right: 0px;
+            top: 40px;
+            font-size: 20px;
+            padding: 10px;
+            border-radius: 15px;
+            font-family: "Prompt", sans-serif;
+            box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+          }
+        }
+
+        .UsernameContainer:hover {
+          cursor: pointer;
+
+          .UsernameDropdown {
+            // display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
 
         .PersonIconContainer {
           // Question: why does the height of this element become 27px when I don't specify a height
@@ -132,7 +171,7 @@
       list-style-type: none;
       padding: 0px;
       margin-top: 5px;
-      background-color: green;
+      background-color: white;
 
       li {
         a {
@@ -168,7 +207,7 @@
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           z-index: 1;
           height: 400px;
-          top: 180px;
+          top: 200px;
           left: 0px;
         }
 
