--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,5 +21,5 @@ a {
 
 @font-face {
   font-family: "Libre";
-  src: url("/fonts/LibreFranklin-Italic-VariableFont_wght.ttf") format("otf");
+  src: url("/fonts/LibreFranklin-Italic-VariableFont_wght.ttf") format("ttf");
 }
