--- a/components/NFTPage/NFTPage.module.scss
+++ b/components/NFTPage/NFTPage.module.scss
@@ -1,5 +1,603 @@
 .NFTPage {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: white;
+  padding: 00px 24px 0px 24px;
+  width: 100%;
+  position: relative;
+  top: 0px;
+
+  .Header {
+    width: 100%;
+    background-color: white;
+  }
+
+  .MainSection {
+    background-color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    .DesktopNavigation {
+      width: 326px;
+      height: 368px;
+      background-color: white;
+      margin: 0px 24px 0px 0px;
+      padding: 4px 0px 12px 0px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      .FiltersPanel {
+        padding: 10px 16px 10px 12px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+
+        .FiltersHeader {
+          font-size: 18px;
+          font-weight: 600;
+          line-height: 18px;
+        }
+
+        .SidebarIcon {
+        }
+
+        .SidebarIcon:hover {
+          cursor: pointer;
+        }
+      }
+    }
+
+    .NFTsSection {
+      display: flex;
+      flex: 1;
+      background-color: white;
+      height: 368px;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      .NFTsHeader {
+        width: 100%;
+        height: 48px;
+        padding-bottom: 10px;
+        background-color: white;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .FilterButtonDesktop {
+          padding: 7px 20px;
+          border: 1px solid black;
+          margin: 0px 10px 0px 0px;
+          border-radius: 30px;
+          font-size: 24px;
+          line-height: 24px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .FilterIconHeader {
+            margin-right: 5px;
+          }
+        }
+
+        .FilterButtonDesktop:hover {
+          cursor: pointer;
+        }
+      }
+
+      .NFTs {
+        width: 100%;
+        flex: 1;
+        background-color: white;
+        display: flex;
+        flex-wrap: wrap;
+        overflow-y: scroll;
+        // margin-left: -12px;
+
+        .NFTSidebarOn {
+          background-color: white;
+          width: 33.3333%;
+          //   aspect-ratio: 50 / 50;
+          box-sizing: border-box;
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 10px;
+          justify-content: flex-start;
+
+          .NFTSidebarOnInner {
+            height: 100%;
+            width: 100%;
+            background-color: white;
+            padding: 0px 12px 0px 12px;
+
+            // position: relative;
+
+            .NFTSidebarOnInnerInner {
+              height: 100%;
+              width: 100%;
+              //   border: thick maroon solid;
+              border-radius: 20px;
+              overflow: hidden;
+              box-shadow: 3px 3px 3px black;
+              border: 1px solid black;
+
+              .ImageContainer {
+                height: 51%;
+                width: 100%;
+                background-color: white;
+                position: relative;
+              }
+
+              .InformationBox {
+                height: 49%;
+                width: 100%;
+                background-color: white;
+                padding: 16px 24px 32px 24px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                .PriceInformation {
+                  width: 100%;
+                  height: 150px;
+                  background-color: white;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: flex-start;
+
+                  .EditionsMinted {
+                    font-size: 15px;
+                    line-height: 15px;
+                    font-weight: bold;
+                    height: 15px;
+                    width: 100%;
+                    text-align: left;
+                    margin: 0px;
+                  }
+
+                  .NFTName {
+                    width: 100%;
+                    font-size: 21px;
+                    font-weight: 700;
+                    margin: 0px;
+                    margin-top: 8px;
+                  }
+
+                  .PriceAndType {
+                    display: flex;
+                    flex-direction: row;
+                    margin-top: 16px;
+
+                    .PriceBox {
+                      display: flex;
+                      flex-direction: column;
+                      margin-right: 24px;
+
+                      .PriceLabel {
+                        color: gray;
+                        font-size: 14px;
+                        line-height: 15px;
+                        font-weight: bold;
+                      }
+
+                      .Price {
+                        font-size: 20px;
+                        line-height: 26px;
+                        font-weight: bold;
+                      }
+                    }
+
+                    .TypeBox {
+                      display: flex;
+                      flex-direction: column;
+                      margin-left: 24px;
+
+                      .TypeLabel {
+                        color: gray;
+                        font-size: 14px;
+                        line-height: 15px;
+                        font-weight: bold;
+                      }
+
+                      .Type {
+                        font-size: 20px;
+                        line-height: 26px;
+                        font-weight: bold;
+                      }
+                    }
+                  }
+                }
+
+                .UserInformation {
+                  width: 100%;
+                  height: 40px;
+                  background-color: white;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: flex-start;
+                  align-items: center;
+
+                  .ProfilePictureContainer {
+                    padding-right: 8px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .ProfilePicture {
+                      border-radius: 50%;
+                    }
+                  }
+
+                  .UsernameContainer {
+                    margin-left: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .Username {
+                      font-size: 18px;
+                      line-height: 22px;
+                      font-weight: 600;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .NFTSidebarOff {
+          padding: 0px 12px 0px 12px;
+          background-color: white;
+          width: 25%;
+          box-sizing: border-box;
+          margin-bottom: 10px;
+
+          .NFTSidebarOffInner {
+            // height: 100%;
+            width: 100%;
+            background-color: white;
+            padding: 0px 12px 0px 12px;
+
+            // position: relative;
+
+            .NFTSidebarOffInnerInner {
+              height: 100%;
+              width: 100%;
+              //   border: thick maroon solid;
+              border-radius: 20px;
+              overflow: hidden;
+              box-shadow: 3px 3px 3px black;
+
+              .ImageContainer {
+                height: 51%;
+                width: 100%;
+                background-color: white;
+                position: relative;
+              }
+
+              .InformationBox {
+                height: 49%;
+                width: 100%;
+                background-color: white;
+                padding: 16px 24px 32px 24px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                .PriceInformation {
+                  width: 100%;
+                  height: 150px;
+                  background-color: white;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: flex-start;
+
+                  .EditionsMinted {
+                    font-size: 15px;
+                    line-height: 15px;
+                    font-weight: bold;
+                    height: 15px;
+                    width: 100%;
+                    text-align: left;
+                    margin: 0px;
+                  }
+
+                  .NFTName {
+                    width: 100%;
+                    font-size: 21px;
+                    font-weight: 700;
+                    margin: 0px;
+                    margin-top: 8px;
+                  }
+
+                  .PriceAndType {
+                    display: flex;
+                    flex-direction: row;
+                    margin-top: 16px;
+
+                    .PriceBox {
+                      display: flex;
+                      flex-direction: column;
+                      margin-right: 24px;
+
+                      .PriceLabel {
+                        color: gray;
+                        font-size: 14px;
+                        line-height: 15px;
+                        font-weight: bold;
+                      }
+
+                      .Price {
+                        font-size: 20px;
+                        line-height: 26px;
+                        font-weight: bold;
+                      }
+                    }
+
+                    .TypeBox {
+                      display: flex;
+                      flex-direction: column;
+                      margin-left: 24px;
+
+                      .TypeLabel {
+                        color: gray;
+                        font-size: 14px;
+                        line-height: 15px;
+                        font-weight: bold;
+                      }
+
+                      .Type {
+                        font-size: 20px;
+                        line-height: 26px;
+                        font-weight: bold;
+                      }
+                    }
+                  }
+                }
+
+                .UserInformation {
+                  width: 100%;
+                  height: 40px;
+                  background-color: white;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: flex-start;
+                  align-items: center;
+
+                  .ProfilePictureContainer {
+                    padding-right: 8px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .ProfilePicture {
+                      border-radius: 50%;
+                    }
+                  }
+
+                  .UsernameContainer {
+                    margin-left: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .Username {
+                      font-size: 18px;
+                      line-height: 22px;
+                      font-weight: 600;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
+
+@media (max-width: 1200px) {
+  .NFTPage {
+    .MainSection {
+      .NFTsSection {
+        .NFTs {
+          .NFTSidebarOn {
+            width: 50%;
+
+            .NFTSidebarOnInner {
+              .NFTSidebarOnInnerInner {
+                .ImageContainer {
+                  height: 65%;
+                }
+
+                .InformationBox {
+                  height: 35%;
+                }
+              }
+            }
+          }
+
+          .NFTSidebarOff {
+            width: 33%;
+
+            .NFTSidebarOffInner {
+              .NFTSidebarOffInnerInner {
+                .ImageContainer {
+                  height: 60%;
+                }
+
+                .InformationBox {
+                  height: 40%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 990px) {
+  .NFTPage {
+    .MainSection {
+      .DesktopNavigation {
+        display: none;
+      }
+
+      .NFTsSection {
+        .NFTs {
+          .NFTSidebarOn {
+            width: 50%;
+
+            .NFTSidebarOnInner {
+              .NFTSidebarOnInnerInner {
+                .ImageContainer {
+                  height: 65%;
+                }
+
+                .InformationBox {
+                  height: 35%;
+                }
+              }
+            }
+          }
+
+          .NFTSidebarOff {
+            width: 50%;
+
+            .NFTSidebarOffInner {
+              .NFTSidebarOffInnerInner {
+                .ImageContainer {
+                  height: 60%;
+                }
+
+                .InformationBox {
+                  height: 40%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .NFTPage {
+    .MainSection {
+      .DesktopNavigation {
+        display: none;
+      }
+
+      .NFTsSection {
+        .NFTs {
+          .NFTSidebarOn {
+            width: 100%;
+
+            .NFTSidebarOnInner {
+              .NFTSidebarOnInnerInner {
+                .ImageContainer {
+                  height: 70%;
+                }
+
+                .InformationBox {
+                  height: 30%;
+                }
+              }
+            }
+          }
+
+          .NFTSidebarOff {
+            width: 100%;
+
+            .NFTSidebarOffInner {
+              .NFTSidebarOffInnerInner {
+                .ImageContainer {
+                  height: 70%;
+                }
+
+                .InformationBox {
+                  height: 30%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .NFTPage {
+    .MainSection {
+      .DesktopNavigation {
+        display: none;
+      }
+
+      .NFTsSection {
+        .NFTs {
+          .NFTSidebarOn {
+            width: 100%;
+
+            .NFTSidebarOnInner {
+              .NFTSidebarOnInnerInner {
+                .ImageContainer {
+                  height: 60%;
+                }
+
+                .InformationBox {
+                  height: 40%;
+                }
+              }
+            }
+          }
+
+          .NFTSidebarOff {
+            width: 100%;
+
+            .NFTSidebarOffInner {
+              .NFTSidebarOffInnerInner {
+                .ImageContainer {
+                  height: 60%;
+                }
+
+                .InformationBox {
+                  height: 40%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// @media (max-width: 1200px) {
+//     .NFTPage {
+//         .MainSection {
+//             .NFTsSection {
+//                 .NFTs {
+//                     .NFTSidebarOn {
+
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
