--- a/components/NFTPage/NFTPage.module.scss
+++ b/components/NFTPage/NFTPage.module.scss
@@ -12,6 +12,10 @@
   .Header {
     width: 100%;
     background-color: white;
+
+    h2 {
+      margin: 0px 0px 15px 0px;
+    }
   }
 
   .MainSection {
@@ -73,6 +77,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        display: none;
 
         .FilterButtonDesktop {
           padding: 7px 20px;
