--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -37,7 +37,7 @@
 }
 
 .SiteHeader {
-  padding: 20px 0px;
+  padding-bottom: 20px;
   width: 100%;
 
   .SiteHeaderInner {
@@ -120,7 +120,7 @@
             background-color: white;
             z-index: 300;
             right: 0px;
-            top: 40px;
+            top: 17px;
             font-size: 20px;
             padding: 10px;
             border-radius: 15px;
@@ -248,7 +248,7 @@
   }
 
   .SiteHeader {
-    padding: 10px 0px;
+    padding-bottom: 10px;
     .SiteHeaderInner {
       padding: 0px 17px;
 
