--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -199,16 +199,65 @@
           transform: scaleX(1);
         }
 
-        div {
-          display: none;
+        .AlbumDrops {
+          display: flex;
           position: absolute;
           background-color: green;
           width: 100%;
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           z-index: 1;
-          height: 400px;
-          top: 200px;
+          // height: 400px;
+          top: auto;
           left: 0px;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+
+          .NFTCardContainer {
+            position: relative;
+            width: 33.33%;
+            height: 300px;
+            padding: 20px;
+            background-color: pink;
+            display: block;
+
+            .NFTCard {
+              width: calc(100%);
+              height: calc(100%);
+              // left: 20px;
+              background-color: red;
+              float: left;
+              // direction: ltr;
+              // box-sizing: border-box;
+              // right: 20px;
+            }
+
+            .NFTCard:hover {
+              position: absolute;
+              background-color: green;
+              // left: 20px;
+              // right: 0;
+              width: calc(200%);
+              // height: calc(100% - 40px);
+              z-index: 5;
+              transition: width 0.22s;
+              // direction: ltr;
+              display: block;
+            }
+          }
+
+          .LeftCardContainer {
+            // direction: ltr;
+          }
+          .MiddleCardContainer {
+            // direction: ltr;
+            background-color: purple;
+          }
+
+          .RightCardContainer {
+            direction: rtl;
+            // right: 0px;
+          }
         }
 
         // background-color: green;
@@ -230,8 +279,8 @@
         // }
       }
 
-      li:hover div {
-        display: block;
+      li:hover .AlbumDrops {
+        display: flex;
       }
     }
   }
