Dall-e 2 Dropdown works with placeholder data

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -200,7 +200,7 @@
         }
 
         .AlbumDrops {
-          display: flex;
+          display: none;
           position: absolute;
           background-color: green;
           width: 100%;
