--- a/components/NFTPage/NFTPage.module.scss
+++ b/components/NFTPage/NFTPage.module.scss
@@ -125,6 +125,7 @@
               margin-left: 12px;
               height: 25px;
               width: 25px;
+              cursor: pointer;
             }
           }
         }
