Worked on add products page, interface looks good and is responsive to mobile layout (some margins might need to be adjusted). No formik yet and not connected to backend, media box also does not have an input

--- a/components/higher order components/AdminPageLayout.module.scss
+++ b/components/higher order components/AdminPageLayout.module.scss
@@ -21,3 +21,11 @@
     // background-color: magenta;
   }
 }
+
+@media (max-width: 768px) {
+  .AdminPageLayout {
+    .AdminSidebar {
+      display: none;
+    }
+  }
+}
