--- a/styles/Admin.module.scss
+++ b/styles/Admin.module.scss
@@ -67,8 +67,7 @@
         justify-content: flex-start;
         align-items: flex-start;
 
-        .TitleContainer,
-        .ImageContainer {
+        .TitleContainer {
           width: 100%;
           border: 2px;
           padding: 20px;
@@ -103,6 +102,75 @@
             justify-content: center;
             align-items: center;
             border: 2px dotted blue;
+
+            .FileInputButton {
+              border: none;
+              background-color: rgb(229, 239, 253);
+              box-sizing: border-box;
+              padding: 8px;
+              border-radius: 5px;
+              color: rgb(31, 81, 153);
+              font-weight: bold;
+            }
+
+            .FileInputButton:hover {
+              cursor: pointer;
+              color: black;
+            }
+
+            p {
+              font-size: 13px;
+              color: gray;
+            }
+          }
+
+          .FileInput:hover {
+            cursor: pointer;
+            background-color: #f6f6f7;
+          }
+        }
+
+        .ImageContainer {
+          width: 100%;
+          border: 2px;
+          padding: 20px;
+          border-radius: 10px;
+          border: 1px solid black;
+          background-color: white;
+
+          p {
+            margin: 0px;
+            margin-bottom: 5px;
+          }
+
+          .FileInput {
+            width: 100%;
+            height: 118px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 2px dotted blue;
+            position: relative;
+
+            input {
+              // background-color: none;
+              display: none;
+            }
+
+            label {
+              margin-bottom: 5px;
+              display: block;
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+            }
+
+            label:hover {
+              cursor: pointer;
+            }
 
             .FileInputButton {
               border: none;
